--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="icon" href="https://i.ibb.co/GP3dyzw/IMG-6199.jpg">
     <title>Frontend-кейс</title>
     <link rel="stylesheet" href="./style/style.css">
-    <script type="module" src="./js/index.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
@@ -18,15 +17,12 @@
                 <button class="form__send-btn" type="submit">Добавить</button>
                 <button class="form__cancel-btn none" type="button">Отмена</button>
             </form>
-            <div class="output"></div>
+            <div id="output" class="output"></div>
         </div>
     </div>
 
-    
-    <footer style="font-family: Arial, Helvetica, sans-serif; text-align: center; padding: 10px 0;">
-        Подключайся к нам в телеграмм <a target="_blank" href="https://t.me/frontend_case">@frontend_case</a>.
-        Помощь новичкам!
-        Будем развиваться во фронтенд разработке вместе :)
-    </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
+    <script type="module" src="./js/index.js"></script>
 </body>
 </html>
